# low-level-programming

lab1/: CMakeLists.txt  configuration.h  init.c  init.h  main.c
lab1/commands/commands/: commands.c  commands.h
lab1/commands/find_utils/: find_utils.c  find_utils.h
lab1/crud/: basic.c  basic.h  crud_status.h
lab1/crud/api/: api.c  api.h
lab1/generator/: generator.c  generator.h
lab1/utils/file_utils/: file_utils.c  file_utils.h
lab1/utils/string_utils/: string_utils.c  string_utils.h
lab1/utils/structs_utils/: structs_utils.c  structs_utils.h
lab2/: ast.h  main.c  query.ms  script.sh
lab3/: CMakeLists.txt  build.sh  main.py
lab3/client/: lex.yy.c  lexer.l  parser.tab.c  parser.tab.h  parser.y
lab3/client/common/: common.c  common.h
lab3/protos/: msg.proto
lab3/server/: init.c  init.h  server.c
lab3/server/commands/commands/: commands.c  commands.h
lab3/server/crud/api/: api.c  api.h
lab3/server/crud/basic/: basic.c  basic.h
lab3/server/structs/: tree_header.h  tuple.h
lab3/server/user_interface/: interactive_mode.c  interactive_mode.h
lab3/server/utils/string_utils/: string_utils.c
lab3/server/utils/structs_utils/: structs_utils.c  structs_utils.h
